[package]
name = "manga-alert"
version = "0.1.1"
authors = ["Matthew Dargan <matthewdargan57@gmail.com>"]
edition = "2021"
description = "Notify about new manga chapters on TCB Scans"
repository = "https://github.com/matthewdargan/manga-alert"
license = "BSD-3-Clause"
keywords = ["manga"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"
notify-rust = "4.11.0"
reqwest = { default-features = false, features = ["blocking", "rustls-tls"], version = "0.12.4" }
scraper = "0.19.0"
